--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -14,7 +14,7 @@ github_enforce_dev_status_compatibility: true
 include_wkhtmltopdf: true
 odoo_test_flavor: Odoo
 odoo_version: 16.0
-org_name: Odoo Community Association (OCA)
+org_name: Omegasoft C.A.
 org_slug: OCA
 rebel_module_groups: []
 repo_description: Odoo modules for Venezuela
