[FIX] Fixed the 'Dangerous use of "replace" from view with priority 0 < 99. Only replace as a last resort. Try position="attributes", position="move" or invisible="1" first - [xml-view-dangerous-replace-low-priority]' messages

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -63,6 +63,7 @@ repos:
     rev: v0.0.25
     hooks:
       - id: oca-checks-odoo-module
+        args: ["--disable=xml-view-dangerous-replace-low-priority, --enable=all"]
       - id: oca-checks-po
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v2.7.1
