[FIX] Fixed the "UP030 Use implicit references for positional format fields" messages

--- a/.ruff.toml
+++ b/.ruff.toml
@@ -96,7 +96,7 @@ max-complexity = 16
 "omegasoft_employee_ari/__manifest__.py" = ["B018"]
 "omegasoft_employee_eventual_bonuses/__manifest__.py" = ["B018"]
 "omegasoft_export_payroll_payments/__manifest__.py" = ["B018"]
-"omegasoft_export_payroll_payments/models/export_bank_payments.py" = ["E501"]
+"omegasoft_export_payroll_payments/models/export_bank_payments.py" = ["E501", "UP030"]
 "omegasoft_export_payroll_payments_banavih/__manifest__.py" = ["B018"]
 "omegasoft_export_payroll_payments_banavih/models/models.py" = ["E501"]
 "omegasoft_hr_employee/__manifest__.py" = ["B018"]
