[FIX] Fixed the "F841 Local variable `X` is assigned to but never used" messages

--- a/.ruff.toml
+++ b/.ruff.toml
@@ -74,7 +74,7 @@ max-complexity = 16
 "l10n_ve_withholding_itf/__manifest__.py" = ["B018"]
 "l10n_ve_withholding_itf/models/res_company.py" = ["E501"]
 "l10n_ve_withholding_iva/__manifest__.py" = ["B018"]
-"l10n_ve_withholding_iva/models/account_move.py" = ["E501"]
+"l10n_ve_withholding_iva/models/account_move.py" = ["E501", "F841"]
 "l10n_ve_withholding_iva/models/res_config_settings.py" = ["E501"]
 "l10n_ve_withholding_municipal/__manifest__.py" = ["B018"]
 "l10n_ve_withholding_municipal/models/account_move.py" = ["E501"]
@@ -131,12 +131,16 @@ max-complexity = 16
 "omegasoft_hr_payroll_receipt_payment/__manifest__.py" = ["B018"]
 "omegasoft_hr_payroll_report_customization/__manifest__.py" = ["B018"]
 "omegasoft_hr_plan_accumulation_vacation/__manifest__.py" = ["B018"]
+"omegasoft_hr_plan_accumulation_vacation/models/hr_leave.py" = ["F841"]
 "omegasoft_hr_report_letters/__manifest__.py" = ["B018"]
+"omegasoft_hr_report_letters/wizard/hr_report_letters.py" = ["F841"]
 "omegasoft_payroll_automatic_rule_code/__manifest__.py" = ["B018"]
 "omegasoft_payroll_planning/__manifest__.py" = ["B018"]
+"omegasoft_payroll_planning/models/plannig_slot.py" = ["F841"]
 "omegasoft_payroll_res_config_settings/__manifest__.py" = ["B018"]
 "omegasoft_payroll_salary_rules_report/__manifest__.py" = ["B018"]
 "omegasoft_payroll_salary_rules_report/models/hr_payroll_report.py" = ["E501"]
 "pways_so_po_consignment/__manifest__.py" = ["B018"]
 "pways_so_po_consignment/models/sale_consignment_order.py" = ["E501"]
 "pways_so_po_consignment/models/stock_warehouse.py" = ["E501"]
+"pways_so_po_consignment/wizard/sale_order_create_wizard.py" = ["F841"]
