[FIX] Fixed the "B023 Function definition does not bind loop variable" messages

--- a/.ruff.toml
+++ b/.ruff.toml
@@ -82,7 +82,7 @@ max-complexity = 16
 "l10n_ve_withholding_tax_liquor/__manifest__.py" = ["B018"]
 "l10n_ve_withholding_tax_liquor/models/account_liquor_tax_report.py" = ["E501"]
 "omegasoft_contract_social_benefit_liabilities_fields/__manifest__.py" = ["B018"]
-"omegasoft_contract_social_benefit_liabilities_fields/models/models.py" = ["E501"]
+"omegasoft_contract_social_benefit_liabilities_fields/models/models.py" = ["E501", "B023"]
 "omegasoft_contract_allocation/__manifest__.py" = ["B018"]
 "omegasoft_contract_benefit_controls_fields/__manifest__.py" = ["B018"]
 "omegasoft_contract_bonuses_fields/__manifest__.py" = ["B018"]
@@ -115,13 +115,14 @@ max-complexity = 16
 "omegasoft_hr_estimated_profits/__manifest__.py" = ["B018"]
 "omegasoft_hr_estimated_profits/models/lines_estimated_profit.py" = ["E501"]
 "omegasoft_hr_hcm/__manifest__.py" = ["B018"]
+"omegasoft_hr_hcm/models/hr_hcm_coverage_scale.py" = ["B023"]
 "omegasoft_hr_holidays/__manifest__.py" = ["B018"]
 "omegasoft_hr_organizational_units/__manifest__.py" = ["B018"]
 "omegasoft_hr_payroll/__manifest__.py" = ["B018"]
 "omegasoft_hr_payroll/models/hr_payroll_payslips_by_employees.py" = ["E501"]
 "omegasoft_hr_payroll/models/hr_payslip_run.py" = ["E501"]
 "omegasoft_hr_payroll/models/hr_payslip_worked_days.py" = ["E501"]
-"omegasoft_hr_payroll/models/hr_payslip.py" = ["E501"]
+"omegasoft_hr_payroll/models/hr_payslip.py" = ["E501", "B023"]
 "omegasoft_res_currency_payroll_rate/__manifest__.py" = ["B018"]
 "omegasoft_salary_bonuses_fields/__manifest__.py" = ["B018"]
 "omegasoft_sale_commissions/__manifest__.py" = ["B018"]
@@ -131,7 +132,7 @@ max-complexity = 16
 "omegasoft_hr_payroll_receipt_payment/__manifest__.py" = ["B018"]
 "omegasoft_hr_payroll_report_customization/__manifest__.py" = ["B018"]
 "omegasoft_hr_plan_accumulation_vacation/__manifest__.py" = ["B018"]
-"omegasoft_hr_plan_accumulation_vacation/models/hr_leave.py" = ["F841"]
+"omegasoft_hr_plan_accumulation_vacation/models/hr_leave.py" = ["F841", "B023"]
 "omegasoft_hr_report_letters/__manifest__.py" = ["B018"]
 "omegasoft_hr_report_letters/wizard/hr_report_letters.py" = ["F841"]
 "omegasoft_payroll_automatic_rule_code/__manifest__.py" = ["B018"]
@@ -141,6 +142,13 @@ max-complexity = 16
 "omegasoft_payroll_salary_rules_report/__manifest__.py" = ["B018"]
 "omegasoft_payroll_salary_rules_report/models/hr_payroll_report.py" = ["E501"]
 "pways_so_po_consignment/__manifest__.py" = ["B018"]
-"pways_so_po_consignment/models/sale_consignment_order.py" = ["E501"]
+"pways_so_po_consignment/models/picking.py" = ["B023"]
+"pways_so_po_consignment/models/purchase.py" = ["B023"]
+"pways_so_po_consignment/models/purchase_picking.py" = ["B023"]
+"pways_so_po_consignment/models/purchase_sale.py" = ["B023"]
+"pways_so_po_consignment/models/sale.py" = ["B023"]
+"pways_so_po_consignment/models/sale_consignment_order.py" = ["E501", "B023"]
 "pways_so_po_consignment/models/stock_warehouse.py" = ["E501"]
+"pways_so_po_consignment/models/sale_consignment_line_lot_serial.py" = ["B023"]
 "pways_so_po_consignment/wizard/sale_order_create_wizard.py" = ["F841"]
+"pways_so_po_consignment/wizard/consignment_report_wizard.py" = ["B023"]
