[FIX] Fixed the "B018 Found useless expression. Either assign it to a variable or remove it." messages

--- a/.ruff.toml
+++ b/.ruff.toml
@@ -78,7 +78,7 @@ max-complexity = 16
 "l10n_ve_withholding_iva/models/account_move.py" = ["E501", "F841"]
 "l10n_ve_withholding_iva/models/res_config_settings.py" = ["E501"]
 "l10n_ve_withholding_municipal/__manifest__.py" = ["B018"]
-"l10n_ve_withholding_municipal/models/account_move.py" = ["E501"]
+"l10n_ve_withholding_municipal/models/account_move.py" = ["E501", "B018"]
 "l10n_ve_withholding_municipal/models/res_config_settings.py" = ["E501"]
 "l10n_ve_withholding_municipal/models/account_move.py" = ["F841"]
 "l10n_ve_withholding_tax_liquor/models/account_liquor_tax_report.py" = ["E501"]
