--- a/.ruff.toml
+++ b/.ruff.toml
@@ -54,7 +54,7 @@ max-complexity = 16
 "l10n_ve_dual_currency/models/account_move.py" = ["E501"]
 "l10n_ve_dual_currency/models/account_move_line.py" = ["E501"]
 "l10n_ve_dual_currency/models/product_product.py" = ["E501"]
-"l10n_ve_dual_currency/models/purchase.py" = ["F841"]
+"l10n_ve_dual_currency/models/purchase.py" = ["F841", "B023"]
 "l10n_ve_dual_currency/models/res_currency.py" = ["E501"]
 "l10n_ve_dual_currency_export/__manifest__.py" = ["B018"]
 "l10n_ve_fiscal_book_report/__manifest__.py" = ["B018"]
@@ -78,7 +78,7 @@ max-complexity = 16
 "l10n_ve_withholding_iva/models/account_move.py" = ["E501", "F841"]
 "l10n_ve_withholding_iva/models/res_config_settings.py" = ["E501"]
 "l10n_ve_withholding_municipal/__manifest__.py" = ["B018"]
-"l10n_ve_withholding_municipal/models/account_move.py" = ["E501", "F841", "B018"]
+"l10n_ve_withholding_municipal/models/account_move.py" = ["E501", "F841", "B018", "B023"]
 "l10n_ve_withholding_municipal/models/res_config_settings.py" = ["E501"]
 "l10n_ve_withholding_tax_liquor/models/account_liquor_tax_report.py" = ["E501"]
 "omegasoft_contract_social_benefit_liabilities_fields/__manifest__.py" = ["B018"]
