[FIX] Fixed the "B007 Loop control variable `X` not used within loop body" messages

--- a/.ruff.toml
+++ b/.ruff.toml
@@ -83,13 +83,14 @@ max-complexity = 16
 "l10n_ve_withholding_tax_liquor/__manifest__.py" = ["B018"]
 "l10n_ve_withholding_tax_liquor/models/account_liquor_tax_report.py" = ["E501"]
 "omegasoft_contract_social_benefit_liabilities_fields/__manifest__.py" = ["B018"]
-"omegasoft_contract_social_benefit_liabilities_fields/models/models.py" = ["E501", "B023"]
+"omegasoft_contract_social_benefit_liabilities_fields/models/models.py" = ["E501", "B023", "B007"]
 "omegasoft_contract_allocation/__manifest__.py" = ["B018"]
 "omegasoft_contract_benefit_controls_fields/__manifest__.py" = ["B018"]
 "omegasoft_contract_bonuses_fields/__manifest__.py" = ["B018"]
 "omegasoft_contract_employee_seniority/__manifest__.py" = ["B018"]
 "omegasoft_contract_parafiscal_contributions_fields/__manifest__.py" = ["B018"]
 "omegasoft_contract_salary_fields/__manifest__.py" = ["B018"]
+"omegasoft_contract_salary_fields/models/contract_salary_fields.py" = ["B007"]
 "omegasoft_contract_utility_liabilities_fields/__manifest__.py" = ["B018"]
 "omegasoft_contract_vacations_fields/__manifest__.py" = ["B018"]
 "omegasoft_employee_arc/__manifest__.py" = ["B018"]
