[UPD] Updated the metadata for this repository

--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -14,13 +14,13 @@ github_enforce_dev_status_compatibility: true
 include_wkhtmltopdf: true
 odoo_test_flavor: Odoo
 odoo_version: 16.0
-org_name: Omegasoft C.A.
+org_name: Odoo Community Association (OCA)
 org_slug: OCA
 rebel_module_groups: []
 repo_description: Odoo modules for Venezuela
 repo_name: Odoo modules for Venezuela
-repo_slug: Closter_l10n_ve
-repo_website: https://github.com/macagua/Closter_l10n_ve
+repo_slug: l10n-venezuela
+repo_website: https://github.com/OCA/l10n-venezuela
 use_pyproject_toml: true
 use_ruff: true
 
