--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -38,10 +38,6 @@ repos:
         entry: found a en.po file
         language: fail
         files: '[a-zA-Z0-9_]*/i18n/en\.po$'
-  - repo: https://github.com/sbidoul/whool
-    rev: v0.5
-    hooks:
-      - id: whool-init
   - repo: https://github.com/oca/maintainer-tools
     rev: d5fab7ee87fceee858a3d01048c78a548974d935
     hooks:
@@ -69,6 +65,21 @@ repos:
             --enable=all",
           ]
       - id: oca-checks-po
+  - repo: https://github.com/myint/autoflake
+    rev: v1.6.1
+    hooks:
+      - id: autoflake
+        args:
+          - --expand-star-imports
+          - --ignore-init-module-imports
+          - --in-place
+          - --remove-all-unused-imports
+          - --remove-duplicate-keys
+          - --remove-unused-variables
+  - repo: https://github.com/psf/black
+    rev: 22.8.0
+    hooks:
+      - id: black
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v2.7.1
     hooks:
@@ -110,12 +121,35 @@ repos:
       - id: check-xml
       - id: mixed-line-ending
         args: ["--fix=lf"]
-  - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.1.3
+  - repo: https://github.com/asottile/pyupgrade
+    rev: v2.38.2
     hooks:
-      - id: ruff
-        args: [--fix, --exit-non-zero-on-fix]
-      - id: ruff-format
+      - id: pyupgrade
+        args: ["--keep-percent-format"]
+  - repo: https://github.com/PyCQA/isort
+    rev: 5.12.0
+    hooks:
+      - id: isort
+        name: isort except __init__.py
+        args:
+          - --settings=.
+        exclude: /__init__\.py$
+  - repo: https://github.com/acsone/setuptools-odoo
+    rev: 3.1.8
+    hooks:
+      - id: setuptools-odoo-make-default
+      - id: setuptools-odoo-get-requirements
+        args:
+          - --output
+          - requirements.txt
+          - --header
+          - "# generated from manifests external_dependencies"
+  - repo: https://github.com/PyCQA/flake8
+    rev: 3.9.2
+    hooks:
+      - id: flake8
+        name: flake8
+        additional_dependencies: ["flake8-bugbear==21.9.2"]
   - repo: https://github.com/OCA/pylint-odoo
     rev: v8.0.19
     hooks:
